
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Atturaif_Application</string>



    <string name="Booking">Booking</string>
    <string name="Home">Atturaif</string>
    <string name="Events">Events</string>
    <string name="Map">Map</string>
    <string name="Shops">Shops</string>
    <string name="Start_AR">Start AR experience </string>
    <string name="virtual_tour">take quick glance</string>
    <string name="Language">EN</string>
    <string name="event">event</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="museum_close">The Museum are close</string>
    <string name="opens_at">Opens At</string>
    <string name="tickets">Tickets</string>
    <string name="adult" translatable="false">Adult</string>
    <string name="children" translatable="false">Children</string>
    <string name="_20_s_r" translatable="false">20 S.R</string>
    <string name="_10_s_r" translatable="false">10 S.R</string>
    <string name="no_tickets_available_now">No Tickets Available Now</string>
    <string name="tour_type">Tour Type</string>
    <string name="tour_type_option">Tour Type </string>
    <string name="no_tours_avilible">No Tours Available now</string>
    <string name="s_r">S.R</string>
    <string name="you_cant_book_today">You Can\'t Book today</string>
    <string name="continue_tour">continue</string>
    <string name="please_enter_your_phone_number">Please Enter Your Phone Number</string>
    <string name="send_code">SEND CODE</string>
    <string name="please_enter_the_code">Please Enter The Receiving Code</string>
    <string name="enter">Enter</string>
    <string name="Book">Book Tickets</string>
    <string name="payment">Payment</string>
    <string name="please_pay_to_complete_the_booking">* Please Pay To Complete The Booking</string>
    <string name="price">Price</string>
    <string name="type">Type</string>
    <string name="date">Date</string>
    <string name="pay">Pay</string>
    <string name="language">Language</string>
    <string name="help">Help</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="are_you_sure_you_want_to_leave">Are you sure you want to leave?</string>
    <string name="sitting">Settings</string>
    <string name="notification">Notification</string>
    <string name="QueickGlance">Quick glance</string>
    <string name="atturaif_is_a_district_located_in_al_dir_iya_at_northwest_of_riyadh_city_in_kingdom_of_saudi_arabia_it_was_the_first_capital_of_the_saudi_dynasty_after_mohammed_bin_abdul_wahhabi_religious_renewal_call_in_1157">Atturaif is a district located in Al-Dir’iya, at Northwest of Riyadh city in Kingdom of Saudi Arabia. It was the first capital of the Saudi Dynasty after Mohammed bin Abdul Wahhabi religious renewal call in 1157.</string>
    <string name="about_us">About us </string>
    <string name="contact_us">Contact us :</string>
    <string name="Atturaif_Help_Message">Atturaif Help Message</string>
    <string name="body_message">/** Please write your issue here ***/</string>
    <string name="email_us">Email us</string>
    <string name="call_us">Call us</string>
    <string name="error_message">There is some problems, please try again later</string>
    <string name="working_hours">Working hours</string>
    <string name="Open_on">Open on:</string>
    <string name="Description">Description:</string>
    <string name="to">to</string>
    <string name="No_events">No events</string>
    <string name="no_wifi">Please check your internet connection and try again.</string>
    <string name="Retry">Retry</string>
    <string name="no_connection">No connection!</string>
    <string name="Booking_Tickt">Ticket booking</string>
    <string name="welcoming_center">Welcoming Center</string>
    <string name="neighbours_houses">Neighbours Houses</string>
    <string name="the_palace">The Palace</string>
    <string name="salwa_neighbour">Salwa Neighbour</string>

    <string name="game_view_content_description" tools:ignore="MissingTranslation">game_view_content_description</string>

    <string name="shopdayname">Day</string>
    <string name="opentimeshop">Open Time</string>
    <string name="Atturaif_shops">Atturaif Shops</string>
    <string name="more">More</string>
    <string name="ticketCopy">Now you must keep a copy of the ticket information to display it when you visit Atturaif</string>
    <string name="cash">To complete the purchase of the tickets, you must pay by cash when you visit Atturaif site on the specified date</string>
    <string name="ticketInfo">Ticket Information:</string>
    <string name="ticketSave">Save Ticket</string>
    <string name="total">Total</string>
    <string name="buy">Buy ticket</string>
    <string name="checkout">Checkout</string>
    <string name="Adult">Adult</string>
    <string name="connection">Network connection is not available!</string>
    <string name="Confirm_before_purchase">Confirm before purchase</string>
    <string name="confirm">Confirm</string>
    <string name="Cancel">Cancel</string>
    <string name="View_Ticket">View Ticket</string>
    <string name="premission"> You have to enable the permission to save the ticket</string>
    <string name="enable">Enable</string>
    <string name="reject">Reject</string>
    <string name="take_glance">Take Glance</string>

    <string name="about_us_dis">Atturaif is a district located in Al-Dir’iya, at Northwest of Riyadh city in Kingdom of Saudi Arabia. It was the first capital of the Saudi Dynasty after Mohammed bin Abdul Wahhabi religious renewal call in 1157. Atturaif district is considered one of the most important monuments of Al-Dir’iya. It has the most important historical buildings, palaces and historical monuments Such as the Salwa Palace, where the first Saudi state affairs were managed and Imam Muhammad bin Saud Mosque. On July 29, 2010, The World Heritage Committee has approved the registration of the Atturaif in the historic Druze Quarter of the UNESCO World Heritage List. Then the restoration work started, followed by adding new places such as the souq where sellers sell their traditional products and food. Also, a museum of social life has been built to show part of everyday old life.</string>

</resources>
