<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialogcorner"
    >

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="18dp"
        android:text="@string/premission"
        android:textColor="@color/colorAccent"
        android:textAppearance="@style/AppTheme"
        android:textSize="25dp"
        />

    <LinearLayout
        android:layout_below="@+id/text"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/enable"
            android:background="@drawable/dialogbtn"
            android:layout_margin="10dp"
            android:textAppearance="@style/AppTheme"
            android:textSize="30dp"

            />

        <Button
            android:id="@+id/btn_no"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/reject"
            android:background="@drawable/dialogbtn"
            android:layout_margin="10dp"
            android:textAppearance="@style/AppTheme"
            android:textSize="30dp"

            />


    </LinearLayout>
</RelativeLayout>