<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".HomePage_Activity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/home_text_view"
                android:layout_width="310dp"
                android:layout_height="match_parent"
                android:layout_marginStart="35dp"
                android:layout_weight="1"
                android:gravity="center"
                android:letterSpacing="-0.02"
                android:text="@string/Home"
                android:textColor="@color/white"
                android:textSize="25sp" />


            <ImageButton
                android:id="@+id/more_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/more" />


        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/atturaif" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal">


            <LinearLayout
                android:id="@+id/bookingtab_button"
                android:layout_width="103dp"
                android:layout_height="105dp"
                android:layout_margin="20dp"
                android:background="@drawable/bookingbtnripple"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/bookingicon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/Booking"
                    android:textColor="#BF9054"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/eventtab_button"
                android:layout_width="103dp"
                android:layout_height="105dp"
                android:layout_margin="20dp"
                android:background="@drawable/eventbtnripple"
                android:gravity="center"
                android:orientation="vertical"

                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/eventicon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/Events"
                    android:textColor="#BF9054"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/shoptab_button"
                android:layout_width="103dp"
                android:layout_height="105dp"
                android:layout_margin="20dp"
                android:background="@drawable/shopbtnripple"
                android:gravity="center"
                android:orientation="vertical"

                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/shopicon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/Shops"
                    android:textColor="#BF9054"
                    android:textSize="18sp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/startARtab_button"
                android:layout_width="103dp"
                android:layout_height="105dp"
                android:layout_margin="20dp"
                android:background="@drawable/arrbtnipple"
                android:gravity="center"
                android:orientation="vertical"

                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/aricon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/Start_AR"
                    android:textColor="#BF9054"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/maptab_button"
                android:layout_width="103dp"
                android:layout_height="105dp"
                android:layout_margin="20dp"
                android:background="@drawable/shopbtnripple"
                android:gravity="center"
                android:orientation="vertical"

                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/mapicon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/Map"
                    android:textColor="#BF9054"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/vrtab_button"
                android:layout_width="103dp"
                android:layout_height="105dp"
                android:layout_margin="20dp"
                android:background="@drawable/shopbtnripple"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/bricon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/virtual_tour"
                    android:textColor="#BF9054"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
