<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Payment_Activity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@android:style/Widget.Material.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:textAlignment="center"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/payment"
        app:titleTextColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="276dp"
                android:layout_marginTop="5dp">

                <ImageView
                    android:layout_width="357dp"
                    android:layout_height="239dp"
                    android:src="@drawable/tickets_payment" />

                <LinearLayout
                    android:layout_width="220dp"
                    android:layout_height="124dp"
                    android:layout_marginStart="70dp"
                    android:layout_marginTop="97dp"
                    android:layout_marginEnd="40dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="236dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="53dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/price"
                                android:textColor="@color/dark_gray"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/price_total"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="3dp"
                                android:layout_weight="1"
                                android:textColor="@color/black"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/type"
                                android:textColor="@color/dark_gray"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/type"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:layout_weight="1"
                                android:textColor="@color/black"
                                android:textSize="16sp" />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_margin="1dp"
                                android:layout_weight="1"
                                android:text="@string/date"
                                android:textColor="@color/dark_gray"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/date"
                                android:layout_width="201dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_margin="5dp"
                                android:layout_weight="1"
                                android:textColor="@color/black"
                                android:textSize="16sp" />
                        </LinearLayout>


                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="@color/dark_gray" />

            <com.braintreepayments.cardform.view.CardForm
                android:id="@+id/card_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_background"
                android:text="@string/pay"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>
